# python_package

./: LICENSE  README.md  setup.cfg
src/matfyz_nswi177_cechlu_project_name.egg-info/: PKG-INFO  SOURCES.txt
src/project-name/: __init__.py  command.py  main.py
