[metadata]
name = matfyz-nswi177-cechlu-project-name
version = 0.0.1
author = cechlu
author_email = lubor@vyfuk.mff.cuni.cz
description = Read actual project name
long_description = file: README.md
long_description_content_type = text/markdown
url = https://d3s.mff.cuni.cz/teaching/nswi177/labs/
keywords = learning filesystems
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = False
